--- a/.github/workflows/DOCKER.yaml
+++ b/.github/workflows/DOCKER.yaml
@@ -97,6 +97,7 @@ jobs:
 
   deploy-to-production:
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
       packages: write
