--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -31,6 +31,10 @@ jobs:
   docker:
     needs: ['flask']
     uses: ./.github/workflows/DOCKER.yaml
+    secrets:
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_USER: ${{ secrets.SSH_USER }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
     with:
       # Dockerfile build entry point (see. https://docs.docker.com/engine/context/working-with-contexts/)
       context: './backend'
