--- a/.github/workflows/students.yaml
+++ b/.github/workflows/students.yaml
@@ -20,6 +20,10 @@ jobs:
   docker:
     needs: ['vue']
     uses: ./.github/workflows/DOCKER.yaml
+    secrets:
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_USER: ${{ secrets.SSH_USER }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
     with:
       # Dockerfile build entry point (see. https://docs.docker.com/engine/context/working-with-contexts/)
       context: './students'
